--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Arise and Shine Tutors | Maths & Science Tutoring</title>
-  <meta name="description" content="Affordable Maths and Science tutoring for GET and FET learners in Burgersfort. From R350 per month." />
+  <title>Arise and Shine Tutors | Mathematics Grades 8–12</title>
+  <meta name="description" content="Specialised Mathematics tutoring for Grades 8–12. Affordable, structured, and results-focused support in Burgersfort." />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -19,15 +19,15 @@
     }
 
     header {
-      background: #0F2A44;
+      background: linear-gradient(135deg, #0F2A44, #163A5F);
       color: white;
-      padding: 20px 0;
+      padding: 20px 0 60px 0;
     }
 
     .container {
       max-width: 1100px;
       margin: auto;
-      padding: 40px 20px;
+      padding: 0 20px;
     }
 
     nav {
@@ -39,6 +39,7 @@
     nav h2 {
       margin: 0;
       font-size: 1.4rem;
+      font-weight: 700;
     }
 
     nav a {
@@ -50,39 +51,41 @@
 
     .hero {
       text-align: center;
-      padding: 80px 20px;
+      margin-top: 60px;
     }
 
     .hero h1 {
-      font-size: 2.6rem;
+      font-size: 2.8rem;
       margin-bottom: 15px;
     }
 
     .hero p {
-      font-size: 1.1rem;
-      max-width: 700px;
+      font-size: 1.15rem;
+      max-width: 720px;
       margin: auto;
-      margin-bottom: 30px;
+      margin-bottom: 35px;
+      color: #E5E7EB;
     }
 
     .btn {
       background: #2E8B57;
       color: white;
-      padding: 14px 30px;
+      padding: 14px 32px;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-size: 1rem;
       cursor: pointer;
       text-decoration: none;
+      font-weight: 600;
     }
 
     section {
-      margin-top: 60px;
+      margin-top: 80px;
     }
 
     h2.section-title {
       text-align: center;
-      font-size: 2rem;
+      font-size: 2.1rem;
       margin-bottom: 40px;
     }
 
@@ -94,41 +97,53 @@
 
     .feature-box {
       background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+      padding: 35px 30px;
+      border-radius: 14px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.06);
       text-align: center;
+      font-weight: 500;
     }
 
-    .subjects ul {
+    .grades ul {
       list-style: none;
       padding: 0;
-      max-width: 600px;
+      max-width: 650px;
       margin: auto;
     }
 
-    .subjects li {
+    .grades li {
       background: white;
-      padding: 15px 20px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
+      padding: 18px 22px;
+      margin-bottom: 14px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.05);
+      font-weight: 500;
+    }
+
+    .resources {
+      background: #FFFFFF;
+      border-radius: 16px;
+      padding: 60px 30px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.06);
+    }
+
+    .resources p {
+      max-width: 750px;
+      margin: auto;
+      text-align: center;
+      font-size: 1.05rem;
     }
 
     .fees {
-      background: #0F2A44;
+      background: linear-gradient(135deg, #0F2A44, #111827);
       color: white;
-      padding: 60px 20px;
+      padding: 70px 20px;
       text-align: center;
-      border-radius: 10px;
-    }
-
-    .fees h2 {
-      margin-bottom: 15px;
+      border-radius: 18px;
     }
 
     .fees p {
-      font-size: 1.2rem;
+      font-size: 1.25rem;
     }
 
     .contact {
@@ -136,16 +151,17 @@
     }
 
     footer {
-      background: #111827;
+      background: #0B1220;
       color: #9CA3AF;
-      padding: 30px 20px;
+      padding: 35px 20px;
       text-align: center;
-      margin-top: 60px;
+      margin-top: 80px;
+      font-size: 0.95rem;
     }
 
     @media (max-width: 600px) {
       .hero h1 {
-        font-size: 2rem;
+        font-size: 2.1rem;
       }
     }
   </style>
@@ -158,64 +174,80 @@
       <h2>Arise & Shine Tutors</h2>
       <div>
         <a href="#about">About</a>
-        <a href="#subjects">Subjects</a>
+        <a href="#grades">Grades</a>
+        <a href="#resources">Resources</a>
         <a href="#contact">Contact</a>
       </div>
     </nav>
+
+    <div class="hero">
+      <h1>Specialised Mathematics Tutoring for Grades 8–12</h1>
+      <p>We help high school learners master Mathematics through structured lessons, consistent practice, and exam-focused support.</p>
+      <a href="#contact" class="btn">Enroll Now</a>
+    </div>
   </div>
 </header>
-
-<section class="hero">
-  <div class="container">
-    <h1>Quality Maths & Science Tutoring for GET & FET Learners</h1>
-    <p>We help learners build confidence, strong understanding, and improved academic results through structured and affordable tutoring.</p>
-    <a href="#contact" class="btn">Enroll Your Child</a>
-  </div>
-</section>
 
 <section id="about">
   <div class="container">
     <h2 class="section-title">Why Arise and Shine Tutors?</h2>
     <div class="features">
-      <div class="feature-box">Experienced and committed tutors</div>
-      <div class="feature-box">Affordable monthly fees</div>
-      <div class="feature-box">Small group focused attention</div>
-      <div class="feature-box">Strong foundation & exam preparation</div>
+      <div class="feature-box">Mathematics-only focus for Grades 8–12</div>
+      <div class="feature-box">Clear explanations and strong foundations</div>
+      <div class="feature-box">Regular practice with exam-style questions</div>
+      <div class="feature-box">Affordable and structured monthly programme</div>
     </div>
   </div>
 </section>
 
-<section id="subjects" class="subjects">
+<section id="grades" class="grades">
   <div class="container">
-    <h2 class="section-title">Subjects & Grades Offered</h2>
+    <h2 class="section-title">Grades We Support</h2>
     <ul>
-      
-      <li>Physical Sciences – Grade 10 to Grade 12</li>
-      <li>Homework assistance and exam preparation</li>
+      <li>Grade 8 Mathematics</li>
+      <li>Grade 9 Mathematics</li>
+      <li>Grade 10 Mathematics</li>
+      <li>Grade 11 Mathematics</li>
+      <li>Grade 12 Mathematics (Exam Preparation)</li>
     </ul>
+  </div>
+</section>
+
+<section id="resources">
+  <div class="container">
+    <div class="resources">
+      <h2 class="section-title">Learning Resources & Past Papers</h2>
+      <p>
+        Enrolled learners receive access to carefully selected Mathematics resources, including past exam papers, revision questions, worked solutions, and practice exercises aligned with the CAPS curriculum.
+        <br><br>
+        This resource support is designed to encourage independent practice, boost confidence, and prepare learners effectively for tests and final examinations.
+      </p>
+    </div>
   </div>
 </section>
 
 <section class="fees">
   <div class="container">
-    <h2>Affordable Fees</h2>
+    <h2>Affordable Programme Fees</h2>
     <p>From <strong>R350 per month</strong></p>
-    <p>Quality education made accessible for every family.</p>
+    <p>Quality Mathematics support made accessible.</p>
   </div>
 </section>
 
 <section id="contact" class="contact">
   <div class="container">
-    <h2 class="section-title">Get in Touch</h2>
+    <h2 class="section-title">Contact & Enrollment</h2>
+    <p><strong>ARISE AND SHINE TUTORS (PTY) LTD</strong></p>
     <p>📍 Burgersfort</p>
-    <p>📞 Call / WhatsApp: <strong>071 328 6497</strong></p>
-    <p>📧 Email: <strong>aas.tutors@gmail.com</strong></p>
+    <p>📞 071 328 6497 / 081 533 0266</p>
+    <p>📧 aas.tutors@gmail.com</p>
     <a href="https://wa.me/27713286497" class="btn">WhatsApp Us</a>
   </div>
 </section>
 
 <footer>
-  <p>&copy; 2026 Arise and Shine Tutors. All rights reserved.</p>
+  <p>REG: K2023 790804 | TAX NO: 9117175274</p>
+  <p>&copy; 2023 Arise and Shine Tutors. All rights reserved.</p>
 </footer>
 
 </body>
