--- a/index.html
+++ b/index.html
@@ -216,11 +216,18 @@
 <section id="resources">
   <div class="container">
     <div class="resources">
-      <h2 class="section-title">Learning Resources & Past Papers</h2>
+      <h2 class="section-title">Mathematics Resources & Past Papers</h2>
       <p>
-        Enrolled learners receive access to carefully selected Mathematics resources, including past exam papers, revision questions, worked solutions, and practice exercises aligned with the CAPS curriculum.
-        <br><br>
-        This resource support is designed to encourage independent practice, boost confidence, and prepare learners effectively for tests and final examinations.
+        Our programme includes structured Mathematics resources designed to strengthen understanding and exam readiness.
+      </p>
+      <div class="features" style="margin-top:40px;">
+        <div class="feature-box">Past Exam Papers (Grades 8–12)</div>
+        <div class="feature-box">Exam-Style Practice Questions</div>
+        <div class="feature-box">Worked Solutions & Explanations</div>
+        <div class="feature-box">Weekly Revision Worksheets</div>
+      </div>
+      <p style="margin-top:35px; text-align:center;">
+        <strong>Note:</strong> Full access to these resources is provided to enrolled learners as part of the Arise and Shine Mathematics Programme.
       </p>
     </div>
   </div>
