--- a/index.html
+++ b/index.html
@@ -388,5 +388,13 @@
   </div>
 
 </body>
-</html>
+</html> 
+
+ </div>
+</section>
+
+<footer>
+  <p>REG: K2023 790804 | TAX NO: 9117175274</p>
+  <p>&copy; 2023 Arise and Shine Tutors. All rights reserved.</p>
+</footer>
 
